# 12C_dp_simulation

./: .gitignore  CMakeLists.txt  README.md  config.json  nuclear_states.json  run.mac  sim.cc  vis.mac
aux_scripts/: analysis_no_error.py
bayesian-optimization/: CQvalueTableShort.txt  bayesian_opt_find_errors.py  bayesian_opt_find_errors_ex2.py  bayesian_opt_find_errors_ex2_pt2.py  bayesian_opt_find_errors_ex3.py  bayesian_opt_find_errors_ex4.py  bayesian_opt_find_errors_ex4_pt2.py  bayesian_opt_no_error.py  bayesian_opt_no_error_energy_prob.py  bayesopt_energy_prob_error.py  bayesopt_energy_prob_error_hint.py  fit_ex1.py  fit_ex2.py  run.mac  top8_analysis.py
compareData/: CQvalueTable.txt  comparePlotSimple.py
include/: ActionInitialization.hh  Analysis.hh  BinaryReactionPhysics.hh  BinaryReactionProcess.hh  Calibrations.hh  CubicSpline.hh  DetectorConstruction.hh  EnergyLoss.hh  EventAction.hh  GenHit.hh  GenSD.hh  NonResonantBackgroundPhysics.hh  NonResonantBackgroundProcess.hh  NucleonStates.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  ProcessDistribution.hh  RootFile.hh  RunAction.hh  RunData.hh  TrackingAction.hh  TrackingInformation.hh  TypeDef.hh
src/: ActionInitialization.cc  BinaryReactionPhysics.cc  BinaryReactionProcess.cc  Calibrations.cc  DetectorConstruction.cc  EventAction.cc  GenHit.cc  GenSD.cc  NonResonantBackgroundPhysics.cc  NonResonantBackgroundProcess.cc  NucleonStates.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  ProcessDistribution.cc  RootFile.cc  RunAction.cc  RunData.cc  TrackingAction.cc  TrackingInformation.cc
